Fixed scroll bar issues on firefox. Removed duplicate desktop media queries

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,7 +32,8 @@
     letter-spacing: 0.1rem;
     cursor: default;
     animation: slide-in-bottom 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-    @media #{$desktop-screen} {
+
+    @media #{$tablet-screen} {
       right: auto;
       bottom: 80px;
       left: 40px;
