--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 65%;
 
-    @media #{$desktop-screen} {
+    @media #{$tablet-screen} {
       height: 100vh;
       width: 100vh;
       position: absolute;
@@ -26,7 +26,8 @@
     display: flex;
     flex-flow: column nowrap;
     margin-left: 40px;
-    @media #{$desktop-screen} {
+
+    @media #{$tablet-screen} {
       position: absolute;
       top: 36%;
       left: 60px;
@@ -36,7 +37,7 @@
       width: 44px;
       height: 2px;
       background-color: $complimentary;
-      @media #{$desktop-screen} {
+      @media #{$tablet-screen} {
         width: 88px;
         height: 3px;
       }
@@ -48,7 +49,7 @@
 
       &.bottom {
         margin: 0 0 18px 30px;
-        @media #{$desktop-screen} {
+        @media #{$tablet-screen} {
           margin-left: 45px;
         }
         animation: slide-in-left 0.9s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.05s
@@ -61,6 +62,11 @@
       font-size: 2rem;
       letter-spacing: 0.2rem;
       animation: slide-in-left 0.9s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
+      @media #{$tablet-screen} {
+        font-size: 4.4rem;
+        letter-spacing: 0.4rem;
+      }
       @media #{$desktop-screen} {
         font-size: 5.6rem;
         letter-spacing: 0.4rem;
@@ -72,6 +78,9 @@
       letter-spacing: 0.1rem;
       animation: slide-in-left 0.9s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.1s
         both;
+      @media #{$tablet-screen} {
+        font-size: 1.2rem;
+      }
       @media #{$desktop-screen} {
         font-size: 1.6rem;
       }
