--- a/src/app/components/parallax-space/parallax-space.component.scss
+++ b/src/app/components/parallax-space/parallax-space.component.scss
@@ -17,7 +17,7 @@
     right: 0 !important;
     margin: auto;
 
-    @media #{$desktop-screen} {
+    @media #{$tablet-screen} {
       width: 90%;
       left: 0 !important;
     }
@@ -32,6 +32,10 @@
     right: 0 !important;
     margin: auto;
     z-index: 2;
+    @media #{$tablet-screen} {
+      width: calc(100vw / 3);
+      min-width: 430px;
+    }
     @media #{$desktop-screen} {
       width: calc(100vw / 3);
     }
@@ -45,7 +49,7 @@
     bottom: auto !important;
     left: auto !important;
     z-index: 3;
-    @media #{$desktop-screen} {
+    @media #{$tablet-screen} {
       right: 26% !important;
       top: 22% !important;
     }
@@ -245,20 +249,5 @@
     top: 19% !important;
     bottom: auto !important;
     right: auto !important;
-  }
-  .image-text {
-    color: $complimentary;
-    font-size: 1.8rem;
-    font-weight: bold;
-    position: absolute !important;
-    left: 5% !important;
-    top: 46% !important;
-    bottom: auto !important;
-    right: auto !important;
-    z-index: 2;
-    @media #{$desktop-screen} {
-      font-size: 3.5rem;
-      left: 31% !important;
-    }
   }
 }
